# HireOs-AIService

./: .dockerignore  .env.example  .gitignore  AI_SERVICE_FEATURES_IMPLEMENTATION_PLAN.md  Dockerfile  README.md  requirements.txt  run.py
Agentic-Document-Extraction-PDF/: LICENSE  README.md  config.json  pyproject.toml  requirements.txt
Agentic-Document-Extraction-PDF/docs/: HIREOS_AI_HIRING_AGENT_GUIDE.md
Agentic-Document-Extraction-PDF/src/: __init__.py
Agentic-Document-Extraction-PDF/src/agents/: __init__.py  _constrained_envelopes.py  analyzer.py  base.py  component_detector.py  critic.py  extractor.py  extractor_pass1.py  extractor_pass2.py  layout_agent.py  modality.py  optimization.py  optimization_integration.py  orchestrator.py  reconciler.py  schema_generator.py  schema_proposal.py  splitter.py  table_detector.py  utils.py  validator.py
Agentic-Document-Extraction-PDF/src/api/: __init__.py  app.py  middleware.py  models.py  tenant_middleware.py
Agentic-Document-Extraction-PDF/src/api/routes/: __init__.py  auth.py  dashboard.py  documents.py  health.py  queue.py  schemas.py  tasks.py  webhooks.py
Agentic-Document-Extraction-PDF/src/client/: __init__.py  connection_manager.py  constrained.py  health_monitor.py  lm_client.py  model_router.py
Agentic-Document-Extraction-PDF/src/client/backends/: __init__.py  factory.py  gemma_backend.py  gemma_tools.py  lm_studio_backend.py  protocol.py  queue_depth.py  vllm_backend.py
Agentic-Document-Extraction-PDF/src/config/: __init__.py  extraction_config.py  logging_config.py  settings.py
Agentic-Document-Extraction-PDF/src/evaluation/: __init__.py  ab_testing.py  benchmark.py  golden_dataset.py  metrics.py  regression.py
Agentic-Document-Extraction-PDF/src/export/: __init__.py  bbox_overlay.py  consolidated_export.py  excel_exporter.py  fhir_exporter.py  json_exporter.py  markdown_exporter.py  rcm_signing.py  signed_receipt.py
Agentic-Document-Extraction-PDF/src/extraction/: __init__.py  multi_record.py
Agentic-Document-Extraction-PDF/src/memory/: __init__.py  _qdrant_ids.py  context_manager.py  correction_tracker.py  dynamic_prompt.py  mem0_client.py  vector_store.py
Agentic-Document-Extraction-PDF/src/monitoring/: __init__.py  alerts.py  metrics.py  observability.py
Agentic-Document-Extraction-PDF/src/pipeline/: __init__.py  graph.py  layout_types.py  provenance.py  runner.py  state.py  table_types.py
Agentic-Document-Extraction-PDF/src/preprocessing/: __init__.py  base_processor.py  batch_manager.py  dicom_processor.py  docx_processor.py  edi_processor.py  file_factory.py  image_enhancer.py  image_processor.py  pdf_processor.py  spreadsheet_processor.py
Agentic-Document-Extraction-PDF/src/profiles/: __init__.py  descriptor.py  finance.py  generic.py  medical_rcm.py  registry.py
Agentic-Document-Extraction-PDF/src/prompts/: __init__.py  classification.py  critic.py  extraction.py  grounding_rules.py  pass1_extractor.py  pass2_auditor.py  synthetic_examples.py  validation.py
Agentic-Document-Extraction-PDF/src/queue/: __init__.py  _url_safety.py  celery_app.py  tasks.py  webhook.py  webhook_dlq.py  webhook_store.py  worker.py
Agentic-Document-Extraction-PDF/src/schemas/: __init__.py  bank_statement.py  base.py  cms1500.py  eob.py  field_types.py  form_1099.py  generic_fallback.py  invoice.py  nested_schemas.py  profile_overlays.py  schema_builder.py  superbill.py  ub04.py  validators.py  versioning.py  w2.py
Agentic-Document-Extraction-PDF/src/security/: __init__.py  audit.py  data_cleanup.py  encryption.py  path_validator.py  phi_mask.py  phi_redactor.py  rbac.py
Agentic-Document-Extraction-PDF/src/storage/: __init__.py  result_store.py
Agentic-Document-Extraction-PDF/src/utils/: __init__.py  date_utils.py  file_utils.py  hash_utils.py  string_utils.py
Agentic-Document-Extraction-PDF/src/validation/: __init__.py  bbox_roundtrip.py  calibration.py  confidence.py  critic_combiner.py  cross_field.py  dual_pass.py  human_review.py  medical_codes.py  pattern_detector.py  tool_validation.py
app/: __init__.py  main.py
app/agents/: __init__.py  graph.py  state.py  tools.py
app/api/routes/: candidates.py  chats.py  health.py  interviews.py  jobs.py  resumes.py  tasks.py
app/clients/: __init__.py  openai_client.py
app/core/: config.py  security.py
app/integrations/: __init__.py
app/integrations/document_extraction/: __init__.py  adapter.py  normalizer.py  pdf_text.py
app/queues/: __init__.py  celery_app.py
app/schemas/: __init__.py  candidates.py  chats.py  common.py  interviews.py  jobs.py  resumes.py  tasks.py
app/services/: __init__.py  ai_utils.py  candidate_scorer_service.py  chat_services.py  interview_service.py  job_matcher_service.py  resume_analyzer_service.py  resume_extractor_service.py
app/workers/: ai_tasks.py
scripts/: run_sample_ai_feature_smoke.py
tests/: test_agent_graph.py  test_ai_feature_services.py  test_ai_routes.py  test_document_adapter_openai.py  test_document_text.py  test_resume_normalizer.py  test_resume_service.py  test_security.py
